--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
+<!-- Website to be imitated: https://www.henryscheinone.com -->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Boostrap Test Site</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <link rels="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+        <link rels="stylesheet" href="css/bootstrap-grid.min.css" type="text/css" />
 
     </head>
     <body>
         <header>
-
         </header>
+        <nav class="navbar nabbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#"><i class="fas fa-tooth fa-2x"></i>Dental Shrine</a>
+        
+        </nav>
         <main>
 
         </main>
         <footer>
 
         </footer>
-        <script>
-        </script>
+        <script type="text/javascript" src="js/bootstrap.bundle.min.js" ></script>
+        <script type="text/javascript" src="js/bootstrap.min.js" ></script>
     </body>
 
 
