Adding nav html

--- a/index.html
+++ b/index.html
@@ -24,9 +24,19 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Shop</a>
                 </li>
-                <li class="nav-item">Author's Corner</li>
-                <li class="nav-item">Caf&eacute;</li>
-                <li class="nav-item"></li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Author's Corner</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Caf&eacute;</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Sign In</a>
+                </li>
+
             </ul>
 
         </div>
