--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Shop</a>
@@ -42,13 +42,17 @@
         </div>
     </nav>
 
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron jumbotron-fluid col-12">
             <div class="container-fluid">
                 <h2 class="h2">March Book Signings</h2>
                 <p class="lead">Authors Preston & Child introduce the latest in the Pendergast series, Two Graves.</p>
             </div>
         </div>
-            <img src="images/jaredd-craig-744902-unsplash.jpg" alt="A book floats in a bookstore." class="img-fluid" />
+        <img src="images/bookstore_float.jpg" alt="A book floats in a bookstore." class="img-fluid height: 50%" />
+        <div class="container-fluid col-12">
+            <p class="blockquote">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        </div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
