--- a/index.html
+++ b/index.html
@@ -42,19 +42,28 @@
         </div>
     </nav>
 
-        <div class="jumbotron jumbotron-fluid col-12">
-            <div class="container-fluid">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="jumbotron col-12">
                 <h2 class="h2">March Book Signings</h2>
                 <p class="lead">Authors Preston & Child introduce the latest in the Pendergast series, Two Graves.</p>
             </div>
         </div>
-        <img src="images/bookstore_float.jpg" alt="A book floats in a bookstore." class="img-fluid height: 50%" />
-        <div class="container-fluid col-12">
-            <blockquote class="blockquote">
-                <p>
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-                </p>
-            </blockquote>
+    </div>
+        <img src="images/bookstore_float.jpg" alt="A book floats in a bookstore." class="img-fluid height: 50%" /> <!-- Image placed here to follow the 'no gutter'  -->
+        <div class="row">
+            <div class="container-fluid col-12">
+                <blockquote class="blockquote my-5 mx-5">
+                    <p>
+                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                    </p>
+                </blockquote>
+            </div>
+        </div>
+        <div class="row">
+            <div class="blue_green_bar col-12">
+
+            </div>
         </div>
 
 
