--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
 
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand h1 col-4" href="#"><i class="fas fa-book fa-lg"></i> Cozy Corner Bookstore</a>
+        <a class="navbar-brand h1 col-4 col-lg-6" href="#"><i class="fas fa-book fa-lg"></i> Cozy Corner Bookstore</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle-navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav mr-auto col-lg-6">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Shop</a>
+                    <a class="nav-link h5" href="#">Shop</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Author's Corner</a>
+                    <a class="nav-link h5" href="#">Author's Corner</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Caf&eacute;</a>
+                    <a class="nav-link h5" href="#">Caf&eacute;</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link h5" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sign In</a>
+                    <a class="nav-link h5" href="#">Sign In</a>
                 </li>
 
             </ul>
@@ -42,7 +42,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid">
+    <div class="container-fluid bg-info">
         <div class="row">
             <div class="jumbotron col-12">
                 <h2 class="h2">March Book Signings</h2>
@@ -51,8 +51,8 @@
         </div>
     </div>
         <img src="images/bookstore_float.jpg" alt="A book floats in a bookstore." class="img-fluid height: 50%" /> <!-- Image placed here to follow the 'no gutter'  -->
-        <div class="row">
-            <div class="container-fluid col-12">
+        <div class="row bg-info">
+            <div class="container-fluid col-12 bg-light">
                 <blockquote class="blockquote my-5 mx-5">
                     <p>
                         "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
@@ -61,9 +61,58 @@
             </div>
         </div>
         <div class="row">
-            <div class="blue_green_bar col-12">
+            <h2 class="h2 col-12 text-center my-5">
+                Upcoming Events
+            </h2>
+        </div>
+        <div class="row">
+            <div class="col-lg-1">
 
-            </div>
+            </div>    
+            <div id="carouselExampleIndicators" class="carousel slide col-12 col-lg-10" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                            <!-- Photo by Aung Soe Min on Unsplash -->
+                        <img src="images/valentines_day.jpg" class="d-block w-100" alt="Book with pages bent in the shape of a heart.">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                        </div>  
+                    </div>
+                    <div class="carousel-item">
+                            <!-- Photo by Ben White on Unsplash -->
+                        <img src="images/book_tour.jpg" class="d-block w-100" alt="Man reading book on chair outside in tall grass.">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                            <!-- Photo by Austin Distel on Unsplash -->
+                        <img src="images/meet_the_author.jpg" class="d-block w-100" alt="Author Brian Atkins signing books while sitting on a couch.">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                        </div>  
+                    </div>  
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              <div class="col-lg-1">
+
+              </div>
         </div>
 
 
