--- a/index.html
+++ b/index.html
@@ -20,30 +20,30 @@
         </button>
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto col-lg-8">
-            <li class="nav-item">
-                <a class="nav-link h5  home" href="#">Home</a>
+            <li class="nav-item" id="homeLink">
+                <a class="nav-link h5  " href="#">Home</a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link h5 shop" href="#">Shop</a>
+            <li class="nav-item active" id="shopLink">
+                <a class="nav-link h5" href="#">Shop</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link h5 author" href="#">Author's Corner</a>
+            <li class="nav-item" id="authorLink">
+                <a class="nav-link h5" href="#">Author's Corner</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link h5 cafe" href="#">Caf&eacute;</a>
+            <li class="nav-item" id="cafeLink">
+                <a class="nav-link h5" href="#">Caf&eacute;</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link h5 about" href="#">About</a>
+            <li class="nav-item" id="aboutLInk">
+                <a class="nav-link h5" href="#">About</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link h5 signIn" href="#">Sign In</a>
+            <li class="nav-item" id="signInLink">
+                <a class="nav-link h5 " href="#">Sign In</a>
             </li>
 
         </ul>
 
     </div>
 </nav>
-<div class="Home invisible">
+<div id="homePage">
     <div class="container-fluid bg-info">
         <div class="row">
             <div class="jumbotron col-12">
