--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
         </button>
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto col-lg-8">
-            <li class="nav-item" id="homeLink">
+            <li class="nav-item">
                 <a class="nav-link h5  " href="#">Home</a>
             </li>
-            <li class="nav-item active" id="shopLink">
+            <li class="nav-item">
                 <a class="nav-link h5" href="#">Shop</a>
             </li>
-            <li class="nav-item" id="authorLink">
+            <li class="nav-item">
                 <a class="nav-link h5" href="#">Author's Corner</a>
             </li>
-            <li class="nav-item" id="cafeLink">
+            <li class="nav-item">
                 <a class="nav-link h5" href="#">Caf&eacute;</a>
             </li>
-            <li class="nav-item" id="aboutLInk">
+            <li class="nav-item">
                 <a class="nav-link h5" href="#">About</a>
             </li>
-            <li class="nav-item" id="signInLink">
+            <li class="nav-item">
                 <a class="nav-link h5 " href="#">Sign In</a>
             </li>
 
@@ -149,8 +149,6 @@
 
 
 </div> <!-- end Home Page -->
-
-    <script src="js/pageToggle.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
