Adding sponsors to index

--- a/shop.html
+++ b/shop.html
@@ -22,16 +22,16 @@
                 <a class="nav-link h5  " href="index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link h5" href="shop.html">Shop</a>
+                <a class="nav-link h5 active" href="shop.html">Shop</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link h5" href="authors.html">Author's Corner</a>
+                <a class="nav-link h5 disabled" href="authors.html">Author's Corner</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link h5 active" href="#">Caf&eacute;</a>
+                <a class="nav-link h5 disabled" href="#">Caf&eacute;</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link h5" href="about.html">About</a>
+                <a class="nav-link h5 disabled" href="about.html">About</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link h5 " href="signin.html">Sign In</a>
@@ -41,64 +41,21 @@
 
     </div>
 </nav>
-<div class="container-fluid">
+<div class="container-fluid bg-info">
     <div class="row bg-secondary">
         <div class="col-12 jumbotron">
-            <h2 class="h2">Cozy Corner Cafe</h2>
-            <p class="lead">Enjoy Your Favorite Read With Our Themed Coffee Flavors!</p>   
+            <h2 class="h2">Shop Cozy Corner</h2>
+            <p class="lead">Enjoy Your Favorite Read, Stop by For a Cup or Spruce Up Your Reading Nook!</p>   
         </div> <!--end column-->
     </div> <!--end row-->
-</div> <!--end container-->
-<div class="container-flex bg-info">
+
     <div class="row mx-2 bg-info">
         <div class="col-sm-6 col-md-4 col-lg-3  my-2">
             <div class="card" style="width: 100%;">
                 <!-- Photo by Greg Rakozy on Unsplash -->
-                <img src="..." class="card-img-top" alt="...">
+                <img src="images/succulents.jpg" class="card-img-top" alt="..." style="max-height: 16rem;">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Add to CartLorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
-                  <a href="#" class="btn btn-primary">Add to Cart</a>
-                </div>
-              </div>     
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 my-2">
-            <div class="card" style="width: 100%;">
-                <!-- Photo by Baher Khairy on Unsplash -->
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Add to CartLorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
-                  <a href="#" class="btn btn-primary">Add to Cart</a>
-                </div>
-              </div>     
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 my-2">
-            <div class="card" style="width: 100%;">
-                <!-- Photo by Giulia Bertelli on Unsplash -->
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Add to CartLorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
-                  <a href="#" class="btn btn-primary">Add to Cart</a>
-                </div>
-              </div>     
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 my-2">
-            <div class="card" style="width: 100%;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Add to CartLorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
-                  <a href="#" class="btn btn-primary">Add to Cart</a>
-                </div>
-              </div>     
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 my-2">
-            <div class="card" style="width: 100%;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Embrace Spring</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
                   <a href="#" class="btn btn-primary">Add to Cart</a>
                 </div>
@@ -106,30 +63,77 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 my-2">
             <div class="card" style="width: 100%;">
-                <img src="..." class="card-img-top" alt="...">
+                <!-- Photo by Baher Khairy on Unsplash -->
+                <img src="images/photography.jpg" class="card-img-top" alt="..." style="max-height: 16rem;">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Add to CartLorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
+                  <h5 class="card-title">Photography Lessons</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
                   <a href="#" class="btn btn-primary">Add to Cart</a>
                 </div>
               </div>     
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 my-2">
             <div class="card" style="width: 100%;">
-                <img src="..." class="card-img-top" alt="...">
+                <!-- Photo by Giulia Bertelli on Unsplash -->
+                <img src="images/teen_reading.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Add to CartLorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
+                  <h5 class="card-title">Teen Reading</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
                   <a href="#" class="btn btn-primary">Add to Cart</a>
                 </div>
               </div>     
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 my-2">
             <div class="card" style="width: 100%;">
-                <img src="..." class="card-img-top" alt="...">
+              <!-- Photo by Nathan Dumlao on Unsplash -->
+                <img src="images/coffee.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Add to CartLorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
+                  <h5 class="card-title">Seasonal Brews</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
+                  <a href="#" class="btn btn-primary">Add to Cart</a>
+                </div>
+              </div>     
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 my-2">
+            <div class="card" style="width: 100%;">
+              <!-- Photo by James Pond on Unsplash -->
+                <img src="images/stormtroopers.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Collectibles</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
+                  <a href="#" class="btn btn-primary">Add to Cart</a>
+                </div>
+              </div>     
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 my-2">
+            <div class="card" style="width: 100%;">
+              <!-- Photo by James Tarbotton on Unsplash -->
+                <img src="images/kindle.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"> Cozy Corner - Kindle</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
+                  <a href="#" class="btn btn-primary">Add to Cart</a>
+                </div>
+              </div>     
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 my-2">
+            <div class="card" style="width: 100%;">
+              <!-- Photo by Luis Alfonso Orellana on Unsplash -->
+                <img src="images/painting_lessons.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Art Lessons</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
+                  <a href="#" class="btn btn-primary">Add to Cart</a>
+                </div>
+              </div>     
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 my-2">
+            <div class="card" style="width: 100%;">
+              <!-- Photo by Kaylah Otto on Unsplash -->
+                <img src="images/cafe.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Caf&eacute; Gift Card</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
                   <a href="#" class="btn btn-primary">Add to Cart</a>
                 </div>
               </div>     
