Adding contact page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand h1 col-4" href="#"><i class="fas fa-book fa-lg"></i> Cozy Corner Bookstore</a>
+        <a class="navbar-brand h1 col-4" href="index.html"><i class="fas fa-book fa-lg"></i> Cozy Corner Bookstore</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle-navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,10 +33,10 @@
                 <a class="nav-link h5 disabled" href="#">Caf&eacute;</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link h5 disabled" href="#">About</a>
+                <a class="nav-link h5" href="contact.html">Contact Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link h5" href="#">Sign In</a>
+                <a class="nav-link h5 disabled" href="#">Sign In</a>
             </li>
 
         </ul>
@@ -67,7 +67,7 @@
             <div class=" col-0 col-lg-1">
 
             </div>    
-            <div id="carouselExampleIndicators" class="carousel slide col-12 col-lg-10" data-ride="carousel">
+            <div id="carouselExampleIndicators" class="carousel slide col-12 col-lg-10" data-ride="carousel" data-touch="true" data-pause="hover">
                 <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -131,7 +131,7 @@
                 <img src="images/chart-pie-solid.svg" alt="Pie Chart" class="img-fluid rounded mx-5" style="width: 100% \9;">
             </div>
             <div class="col-lg-5">
-                <div id="carouselExampleControls" class="carousel slide bg-transparent py-5 h-100 d-flex align-items-center" data-ride="carousel">
+                <div id="carouselExampleControls" class="carousel slide bg-transparent py-5 h-100 d-flex align-items-center" data-ride="carousel" data-interval="6000" data-pause="hover" data-touch="true">
                     <div class="carousel-inner text-center">
                         <div class="carousel-item">
                         <i class="fas fa-book-reader text-dark fa-5x"></i>
@@ -170,7 +170,7 @@
             </div>
             <div class="w-100"></div>
             <div class="col-12 col-lg-6 bg-info text-light">
-                <div class="row border border-white">
+                <div class="row border border-white py-4">
                     <div class="col-12 col-lg-6 bg-info text-light d-flex flex-column justify-content-around align-items-stretch">
                             <h3 class="h3 font-weight-bold my-3"><i class="fab fa-amazon font-weight-bold mx-2"></i>Amazon Kindle </h3>
                             <h3 class="h3 font-weight-bold my-3"><i class="fab fa-bandcamp font-weight-bold mx-2"></i>Bandcamp </h3>
@@ -182,7 +182,7 @@
                 </div>
             </div>
             <div class="col-12 col-lg-6 bg-info">
-                <div class="row border border-white">
+                <div class="row border border-white py-4">
                         <div class="col-12 col-lg-6 bg-info text-light d-flex flex-column justify-content-around align-items-stretch">
                                 <h3 class="h3 font-weight-bold my-3"><i class="fab fa-medium-m font-weight-bold mx-2"></i>Medium </h3>
                                 <h3 class="h3 font-weight-bold my-3"><i class="fab fa-paypal font-weight-bold mx-2"></i>Paypal </h3>
@@ -195,7 +195,7 @@
             </div>
             <div class="w-100"></div>
             <div class="col-12 col-lg-6 bg-info">
-                <div class="row border border-white">
+                <div class="row border border-white py-4">
                     <div class="col-12 col-lg-6 bg-info text-light d-flex flex-column justify-content-around align-items-stretch">
                             <h3 class="h3 font-weight-bold my-3"><i class="fab fa-apple font-weight-bold mx-2"></i>Apple </h3>
                             <h3 class="h3 font-weight-bold my-3"><i class="fab fa-btc font-weight-bold mx-2"></i>Bitcoin </h3>
@@ -207,7 +207,7 @@
                 </div>
             </div>
             <div class="col-12 col-lg-6 bg-info">
-                <div class="row border border-white">
+                <div class="row border border-white py-4">
                     <div class="col-12 col-lg-6 bg-info text-light d-flex flex-column justify-content-around align-items-stretch">
                             <h3 class="h3 font-weight-bold my-3"><i class="fab fa-avianex font-weight-bold mx-2"></i>avianex </h3>
                             <h3 class="h3 font-weight-bold my-3"><i class="fab fa-ello font-weight-bold mx-2"></i>Ello </h3>
@@ -219,8 +219,24 @@
                 </div>
             </div>
         </div>
-
-
+    <footer>
+        <div class="row bg-dark text-white py-5 px-5 d-flex">
+            <div class="col-12 col-md-6 col-lg-6 d-flex flex-column  justify-content-center">
+                <p class="h5"><i class="fas fa-book fa-lg justify-content-start py-2"></i> Cozy Corner Bookstore</p>
+                <a href="#" class="text-decoration-none h5 py-2">GDPR Privacy Policy</a>
+                <a href="#" class="text-decoration-none h5 py-2">Book Rental Policy</a>
+            </div>
+            <div class="col-12 col-md-6 col-lg-6 justify-content-end">
+                <p class="h5 font-weight-bold d-flex justify-content-end mb-5">Contact</p>
+                <p class="h5 d-flex justify-content-end">202.555.0168 US</p>
+                <p class="h5 d-flex justify-content-end mb-5">613.555.0134 CA</p>
+                <p class="h5 d-flex justify-content-end">Cozy Corner Bookstore</p>  
+                <p class="h5 d-flex justify-content-end">1917 Brown Street</p>
+                <p class="h5 d-flex justify-content-end mb-5">Walnut Creek, CA 94596</p> 
+                <p class="d-flex justify-content-end"><small>Copyright &copy; 2019 Cozy Corner. All Rights Reserved</small></p>              
+            </div>
+        </div> <!-- end row -->
+    </footer> <!-- end footer -->
     </div>  <!-- end container -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
