--- a/shop.html
+++ b/shop.html
@@ -12,7 +12,7 @@
 
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand h1 col-4" href="#"><i class="fas fa-book fa-lg"></i> Cozy Corner Bookstore</a>
+        <a class="navbar-brand h1 col-4" href="index.html"><i class="fas fa-book fa-lg"></i> Cozy Corner Bookstore</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle-navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -25,16 +25,16 @@
                 <a class="nav-link h5 active" href="shop.html">Shop</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link h5 disabled" href="authors.html">Author's Corner</a>
+                <a class="nav-link h5 disabled" href="#">Author's Corner</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link h5 disabled" href="#">Caf&eacute;</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link h5 disabled" href="about.html">About</a>
+                <a class="nav-link h5" href="contact.html">Contact Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link h5 " href="signin.html">Sign In</a>
+                <a class="nav-link h5 disabled" href="#">Sign In</a>
             </li>
 
         </ul>
@@ -49,11 +49,11 @@
         </div> <!--end column-->
     </div> <!--end row-->
 
-    <div class="row mx-2 bg-info">
-        <div class="col-sm-6 col-md-4 col-lg-3  my-2">
+    <div class="row mx-2 bg-info py-5">
+        <div class="col-sm-6 col-md-4 col-lg-3 my-2">
             <div class="card" style="width: 100%;">
                 <!-- Photo by Greg Rakozy on Unsplash -->
-                <img src="images/succulents.jpg" class="card-img-top" alt="..." style="max-height: 16rem;">
+                <img src="images/succulents.jpg" class="card-img-top" alt="A small potted cactus acts as a bookend.">
                 <div class="card-body">
                   <h5 class="card-title">Embrace Spring</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
@@ -64,7 +64,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 my-2">
             <div class="card" style="width: 100%;">
                 <!-- Photo by Baher Khairy on Unsplash -->
-                <img src="images/photography.jpg" class="card-img-top" alt="..." style="max-height: 16rem;">
+                <img src="images/photography.jpg" class="card-img-top" alt="Glasses, cigarettes and a camera surround a photography book.">
                 <div class="card-body">
                   <h5 class="card-title">Photography Lessons</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
@@ -75,7 +75,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 my-2">
             <div class="card" style="width: 100%;">
                 <!-- Photo by Giulia Bertelli on Unsplash -->
-                <img src="images/teen_reading.jpg" class="card-img-top" alt="...">
+                <img src="images/teen_reading.jpg" class="card-img-top" alt="Hands holding a small novel title About a Boy">
                 <div class="card-body">
                   <h5 class="card-title">Teen Reading</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
@@ -86,7 +86,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 my-2">
             <div class="card" style="width: 100%;">
               <!-- Photo by Nathan Dumlao on Unsplash -->
-                <img src="images/coffee.jpg" class="card-img-top" alt="...">
+                <img src="images/coffee.jpg" class="card-img-top" alt="Four cops of coffee with decorative cream designs sit in a circle.">
                 <div class="card-body">
                   <h5 class="card-title">Seasonal Brews</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
@@ -97,7 +97,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 my-2">
             <div class="card" style="width: 100%;">
               <!-- Photo by James Pond on Unsplash -->
-                <img src="images/stormtroopers.jpg" class="card-img-top" alt="...">
+                <img src="images/stormtroopers.jpg" class="card-img-top" alt="Two stormtrooper figurines stand behind Captain Phasma.">
                 <div class="card-body">
                   <h5 class="card-title">Collectibles</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
@@ -108,7 +108,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 my-2">
             <div class="card" style="width: 100%;">
               <!-- Photo by James Tarbotton on Unsplash -->
-                <img src="images/kindle.jpg" class="card-img-top" alt="...">
+                <img src="images/kindle.jpg" class="card-img-top" alt="An amazon Kindle being held by a young person.">
                 <div class="card-body">
                   <h5 class="card-title"> Cozy Corner - Kindle</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
@@ -119,7 +119,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 my-2">
             <div class="card" style="width: 100%;">
               <!-- Photo by Luis Alfonso Orellana on Unsplash -->
-                <img src="images/painting_lessons.jpg" class="card-img-top" alt="...">
+                <img src="images/painting_lessons.jpg" class="card-img-top" alt="Two abstractly painted doorways.">
                 <div class="card-body">
                   <h5 class="card-title">Art Lessons</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
@@ -130,7 +130,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 my-2">
             <div class="card" style="width: 100%;">
               <!-- Photo by Kaylah Otto on Unsplash -->
-                <img src="images/cafe.jpg" class="card-img-top" alt="...">
+                <img src="images/cafe.jpg" class="card-img-top" alt="A woman sits in a cafe as the sun shines through a nearby window.">
                 <div class="card-body">
                   <h5 class="card-title">Caf&eacute; Gift Card</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
@@ -141,12 +141,43 @@
 
     </div> <!--end row-->
 </div> <!--end container-->
+<div class="row">
+  <div class="card bg-dark text-dark text-center">
+      <!-- Photo by Nick Fewings on Unsplash -->
+      <img src="images/store_bookshelf.jpg" class="card-img" alt="Books on a Bookshelf">
+      <div class="card-img-overlay">
+        <h5 class="card-title display-1 text mt-5">Spring Off Fantasy Fiction Sale</h5>
+        <p class="card-text h5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis officiis excepturi blanditiis iusto nulla, voluptatibus voluptatem aperiam tenetur, eum dolorem adipisci.</p>
+        <a class="btn btn-dark my-4" href="contact.html" role="button">Map</a>
+      </div>
+    </div>
+</div>
 
-
-
-</div> <!-- end Home Page -->
+<div class="container-fluid">
+  <footer>
+      <div class="row bg-dark text-white py-5 px-5 d-flex">
+          <div class="col-12 col-md-6 col-lg-6 d-flex flex-column justify-content-center">
+              <p class="h5"><i class="fas fa-book fa-lg justify-content-start py-2"></i> Cozy Corner Bookstore</p>
+              <a href="#" class="text-decoration-none h5 py-2">GDPR Privacy Policy</a>
+              <a href="#" class="text-decoration-none h5 py-2">Book Rental Policy</a>
+          </div>
+          <div class="col-12 col-md-6 col-lg-6 justify-content-end">
+              <p class="h5 font-weight-bold d-flex justify-content-end mb-5">Contact</p>
+              <p class="h5 d-flex justify-content-end">202.555.0168 US</p>
+              <p class="h5 d-flex justify-content-end mb-5">613.555.0134 CA</p>
+              <p class="h5 d-flex justify-content-end">Cozy Corner Bookstore</p>  
+              <p class="h5 d-flex justify-content-end">1917 Brown Street</p>
+              <p class="h5 d-flex justify-content-end mb-5">Walnut Creek, CA 94596</p> 
+              <p class="d-flex justify-content-end"><small>Copyright &copy; 2019 Cozy Corner. All Rights Reserved</small></p>              
+          </div>
+      </div> <!-- end row -->
+  </footer> <!-- end footer -->
+</div> <!-- end container -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d12121.431161526467!2d-112.0178286!3d40.577857200000004!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1554586890910!5m2!1sen!2sus" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe> -->
